<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8F8F8"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".WaterRecomendations">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="658dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="#FBF9F9"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="216dp"
                android:layout_weight="1"
                android:background="#FBFAFA"
                app:srcCompat="@drawable/cinsejos" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Conoce a tu reciclador"
                android:textAlignment="center"
                android:textColor="#114B79"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/recommendation_water_1"
                android:textColor="#070707"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/recommendation_water_2"
                android:textColor="#0E0E0E"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/recommendation_water_3"
                android:textColor="#0B0B0B"
                android:textStyle="italic" />

            <Button
                android:id="@+id/btnBackRecommend"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#009688"
                android:text="Regresar" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>